directions page completed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,10 +63,11 @@ a {
   object-fit: fill!important;
 }
 
-.directionButtonsDiv{
+.navigationDiv{
   display: flex;
   align-items: center;
 }
+
 
 @media all and (max-width: 500px) {
   
