--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,16 @@ a {
 .vegCardImgDiv {
   object-fit: fill!important;
 }
+/* Product Card */
+.productCardDescription{
+  
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  
+}
 
 /* Directions Page */
 .navigationDiv{
