--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ a {
 }
 
 .navDropDown {
-  background-color: #d4e1af!important;
+  background: linear-gradient( #638d1266, #f0e6db 60%)!important;
   min-width: 200px!important;
 }
 
